--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 -->	
 
 	<head>
-		<title>Welcome to my site</title>
+		<title>Welcome to my site ramprasath janarthanan</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--Oswald Font -->
